--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "react-addressable-sliders",
-    "version": "1.0.0",
-    "description": "",
+    "version": "0.0.2",
+    "description": "Multi-range slider made with react with addressable and identifiable ranges",
     "private": false,
     "author": "Giovanni Caiazzo",
-    "main": "./src/js/index.jsx",
+    "main": "src/index.js",
     "license": "MIT",
     "repository": {
         "type": "git",
@@ -16,19 +16,30 @@
         "multi-range",
         "addressable"
     ],
-    "husky": {
-        "hooks": {
-            "pre-commit": "pretty-quick --staged"
-        }
-    },
     "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.14.5",
+        "@babel/preset-react": "^7.14.5",
+        "@babel/core": "^7.14.6",
+        "babel-loader": "^8.2.2",
+        "babel-preset-react": "^6.24.1",
+        "css-loader": "^5.2.6",
+        "html-webpack-plugin": "^5.3.1",
+        "husky": "^6.0.0",
         "prettier": "^2.3.1",
         "pretty-quick": "^3.1.0",
-        "husky": "^6.0.0"
+        "style-loader": "^2.0.0",
+        "webpack": "^5.39.0",
+        "webpack-cli": "^4.7.2",
+        "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
+    },
+    "scripts": {
+        "start": "webpack serve",
+        "format": "yarn run format:prettier",
+        "format:prettier": "node_modules/.bin/prettier --config .prettierrc \"src/**/*.*\" --write"
     }
 }
