Removed webpack, left only the slider export, added babel cli and made a better build script

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
- "presets": ["@babel/preset-react"],
- "plugins": ["@babel/plugin-proposal-class-properties"]
+    "presets": [
+        [
+            "@babel/env",
+            {
+                "modules": "commonjs",
+                "targets": ["last 2 versions", "not dead"]
+            }
+        ],
+        "@babel/preset-react"
+    ],
+    "plugins": ["@babel/plugin-proposal-class-properties"]
 }
