--- a/package.json
+++ b/package.json
@@ -21,21 +21,29 @@
     ],
     "devDependencies": {
         "@babel/cli": "^7.8.4",
+        "@babel/core": "^7.14.6",
         "@babel/plugin-proposal-class-properties": "^7.14.5",
         "@babel/preset-env": "^7.9.5",
         "@babel/preset-react": "^7.14.5",
-        "@babel/core": "^7.14.6",
+        "babel-loader": "^8.2.2",
         "babel-preset-react": "^6.24.1",
+        "css-loader": "^5.2.6",
+        "html-webpack-plugin": "^5.3.1",
         "prettier": "^2.3.1",
         "pretty-quick": "^3.1.0",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "style-loader": "^2.0.0",
+        "webpack": "^5.39.0",
+        "webpack-cli": "^4.7.2",
+        "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
         "prop-types": "^15.7.2"
     },
     "scripts": {
-        "build": "babel ./src -d lib --config-file ./.babelrc",
+        "start": "webpack serve --entry ./src/index-dev.js",
+        "build": "rm -r lib && babel ./src -d lib --config-file ./.babelrc --ignore './src/index-dev.js'",
         "format": "yarn run format:prettier",
         "format:prettier": "node_modules/.bin/prettier --config .prettierrc \"src/**/*.*\" --write",
         "publish-new-patch": "npm version patch && npm publish"
