--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "scripts": {
         "start": "webpack serve --entry ./src/index-dev.js",
         "build": "rm -r lib && babel ./src -d lib --config-file ./.babelrc --ignore './src/index-dev.js'",
+        "publish": "yarn jest && yarn build && yarn publish-new-patch",
         "format": "yarn run format:prettier",
         "format:prettier": "node_modules/.bin/prettier --config .prettierrc \"src/**/*.*\" --write",
         "jest": "jest --config jest.config.js",
