Added npm ignore to avoid putting src and test folder in the npm package

--- a/.npmignore
+++ b/.npmignore
@@ -3,7 +3,8 @@
 # cache and builds files
 build/
 dist/
-lib/
+src/
+test/
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
