Migrated code to Typescript

--- a/package.json
+++ b/package.json
@@ -25,16 +25,24 @@
         "@babel/plugin-proposal-class-properties": "^7.14.5",
         "@babel/preset-env": "^7.9.5",
         "@babel/preset-react": "^7.14.5",
+        "@types/jest": "^27.0.2",
+        "@types/prop-types": "^15.7.4",
+        "@types/react": "^17.0.34",
+        "@types/react-dom": "^17.0.11",
         "babel-loader": "^8.2.2",
         "babel-preset-react": "^6.24.1",
         "css-loader": "^5.2.6",
         "html-webpack-plugin": "^5.3.1",
-        "jest-cli": "^25.3.0",
+        "jest": "^27.3.1",
+        "jest-cli": "^27.3.1",
         "prettier": "^2.3.1",
         "pretty-quick": "^3.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "style-loader": "^2.0.0",
+        "ts-jest": "^27.0.7",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.4.4",
         "webpack": "^5.39.0",
         "webpack-cli": "^4.7.2",
         "webpack-dev-server": "^3.11.2"
@@ -43,8 +51,8 @@
         "prop-types": "^15.7.2"
     },
     "scripts": {
-        "start": "webpack serve --entry ./src/index-dev.js",
-        "build": "rm -r lib && babel ./src -d lib --config-file ./.babelrc --ignore './src/index-dev.js'",
+        "start": "webpack serve --entry ./src/index-dev.tsx",
+        "build": "rm -rfv lib/* && babel ./src -d lib --config-file ./.babelrc --ignore './src/index-dev.tsx'",
         "format": "yarn run format:prettier",
         "format:prettier": "node_modules/.bin/prettier --config .prettierrc \"src/**/*.*\" --write",
         "jest": "jest --config jest.config.js",
