--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "react",
         "slider",
         "multi-range",
-        "addressable"
+        "addressable",
+        "typescript"
     ],
     "devDependencies": {
         "@babel/cli": "^7.8.4",
